# filtersql

./: .gitignore  README.md  SPECS.md  pyproject.toml  setup.py  todo.md
.github/workflows/: publish.yml
filtersql/: __init__.py  sql.py
filtersql/examples/ai/: create_demo_db.py  gemini_integration.py
filtersql/examples/datatables/: datatables_example.py
filtersql/examples/datatables/templates/: index.html
filtersql/examples/pagination/: cursor_pagination.py
filtersql/examples/pagination/templates/: edit.html
filtersql/tests/: sql_pg_test.py
