[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filtersql"
dynamic = ["version", "readme"]
description = "SQL Backend Library for AI, Datatables and Frontend Apps"
authors = [
    { name = "Federico Thiella", email = "fthiella@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "filtersql.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}